// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompilerExpressions Generic test 1`] = `
Tree {
  "_extra": null,
  "_nos": [
    Tree {
      "_extra": null,
      "_nos": [
        Tree {
          "_extra": Lexeme {
            "_coluna": 0,
            "_linha": 0,
            "_palavra": "VAR",
            "_token": Token {
              "_classe": "comando",
              "_lexemas": [
                [Circular],
              ],
              "_subclasse": "VAR",
            },
          },
          "_nos": [],
          "_simbolo": "command-VAR",
        },
        Tree {
          "_extra": null,
          "_nos": [
            Tree {
              "_extra": null,
              "_nos": [
                Tree {
                  "_extra": Lexeme {
                    "_coluna": 4,
                    "_linha": 1,
                    "_palavra": "var",
                    "_token": Token {
                      "_classe": "identificador",
                      "_lexemas": [
                        [Circular],
                        Lexeme {
                          "_coluna": 4,
                          "_linha": 2,
                          "_palavra": "hugo",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 4,
                          "_linha": 4,
                          "_palavra": "var",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 4,
                          "_linha": 5,
                          "_palavra": "hugo",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 11,
                          "_linha": 6,
                          "_palavra": "var",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 17,
                          "_linha": 6,
                          "_palavra": "hugo",
                          "_token": [Circular],
                        },
                      ],
                      "_subclasse": "",
                    },
                  },
                  "_nos": [],
                  "_simbolo": "identificador",
                },
                Tree {
                  "_extra": Lexeme {
                    "_coluna": 7,
                    "_linha": 1,
                    "_palavra": ":",
                    "_token": Token {
                      "_classe": "especial",
                      "_lexemas": [
                        [Circular],
                        Lexeme {
                          "_coluna": 8,
                          "_linha": 2,
                          "_palavra": ":",
                          "_token": [Circular],
                        },
                      ],
                      "_subclasse": "dpo",
                    },
                  },
                  "_nos": [],
                  "_simbolo": "especial-colon",
                },
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 9,
                        "_linha": 1,
                        "_palavra": "int",
                        "_token": Token {
                          "_classe": "nome-escalar",
                          "_lexemas": [
                            [Circular],
                            Lexeme {
                              "_coluna": 10,
                              "_linha": 2,
                              "_palavra": "int",
                              "_token": [Circular],
                            },
                          ],
                          "_subclasse": "int",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "nome-escalar-int",
                    },
                  ],
                  "_simbolo": "<type>",
                },
                Tree {
                  "_extra": Lexeme {
                    "_coluna": 12,
                    "_linha": 1,
                    "_palavra": ";",
                    "_token": Token {
                      "_classe": "especial",
                      "_lexemas": [
                        [Circular],
                        Lexeme {
                          "_coluna": 13,
                          "_linha": 2,
                          "_palavra": ";",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 11,
                          "_linha": 4,
                          "_palavra": ";",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 13,
                          "_linha": 5,
                          "_palavra": ";",
                          "_token": [Circular],
                        },
                        Lexeme {
                          "_coluna": 21,
                          "_linha": 6,
                          "_palavra": ";",
                          "_token": [Circular],
                        },
                      ],
                      "_subclasse": "del",
                    },
                  },
                  "_nos": [],
                  "_simbolo": "especial-delimiter",
                },
              ],
              "_simbolo": "<variable_declaration>",
            },
            Tree {
              "_extra": null,
              "_nos": [
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 4,
                        "_linha": 2,
                        "_palavra": "hugo",
                        "_token": Token {
                          "_classe": "identificador",
                          "_lexemas": [
                            Lexeme {
                              "_coluna": 4,
                              "_linha": 1,
                              "_palavra": "var",
                              "_token": [Circular],
                            },
                            [Circular],
                            Lexeme {
                              "_coluna": 4,
                              "_linha": 4,
                              "_palavra": "var",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 4,
                              "_linha": 5,
                              "_palavra": "hugo",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 11,
                              "_linha": 6,
                              "_palavra": "var",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 17,
                              "_linha": 6,
                              "_palavra": "hugo",
                              "_token": [Circular],
                            },
                          ],
                          "_subclasse": "",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "identificador",
                    },
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 8,
                        "_linha": 2,
                        "_palavra": ":",
                        "_token": Token {
                          "_classe": "especial",
                          "_lexemas": [
                            Lexeme {
                              "_coluna": 7,
                              "_linha": 1,
                              "_palavra": ":",
                              "_token": [Circular],
                            },
                            [Circular],
                          ],
                          "_subclasse": "dpo",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "especial-colon",
                    },
                    Tree {
                      "_extra": null,
                      "_nos": [
                        Tree {
                          "_extra": Lexeme {
                            "_coluna": 10,
                            "_linha": 2,
                            "_palavra": "int",
                            "_token": Token {
                              "_classe": "nome-escalar",
                              "_lexemas": [
                                Lexeme {
                                  "_coluna": 9,
                                  "_linha": 1,
                                  "_palavra": "int",
                                  "_token": [Circular],
                                },
                                [Circular],
                              ],
                              "_subclasse": "int",
                            },
                          },
                          "_nos": [],
                          "_simbolo": "nome-escalar-int",
                        },
                      ],
                      "_simbolo": "<type>",
                    },
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 13,
                        "_linha": 2,
                        "_palavra": ";",
                        "_token": Token {
                          "_classe": "especial",
                          "_lexemas": [
                            Lexeme {
                              "_coluna": 12,
                              "_linha": 1,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            [Circular],
                            Lexeme {
                              "_coluna": 11,
                              "_linha": 4,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 13,
                              "_linha": 5,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 21,
                              "_linha": 6,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                          ],
                          "_subclasse": "del",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "especial-delimiter",
                    },
                  ],
                  "_simbolo": "<variable_declaration>",
                },
              ],
              "_simbolo": "<variable_declaration_list>",
            },
          ],
          "_simbolo": "<variable_declaration_list>",
        },
      ],
      "_simbolo": "<variable_declaration_part>",
    },
    Tree {
      "_extra": null,
      "_nos": [
        Tree {
          "_extra": Lexeme {
            "_coluna": 0,
            "_linha": 3,
            "_palavra": "BEGIN",
            "_token": Token {
              "_classe": "comando",
              "_lexemas": [
                [Circular],
              ],
              "_subclasse": "BEGIN",
            },
          },
          "_nos": [],
          "_simbolo": "command-BEGIN",
        },
        Tree {
          "_extra": null,
          "_nos": [
            Tree {
              "_extra": null,
              "_nos": [
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": null,
                      "_nos": [
                        Tree {
                          "_extra": null,
                          "_nos": [
                            Tree {
                              "_extra": Lexeme {
                                "_coluna": 4,
                                "_linha": 4,
                                "_palavra": "var",
                                "_token": Token {
                                  "_classe": "identificador",
                                  "_lexemas": [
                                    Lexeme {
                                      "_coluna": 4,
                                      "_linha": 1,
                                      "_palavra": "var",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 4,
                                      "_linha": 2,
                                      "_palavra": "hugo",
                                      "_token": [Circular],
                                    },
                                    [Circular],
                                    Lexeme {
                                      "_coluna": 4,
                                      "_linha": 5,
                                      "_palavra": "hugo",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 11,
                                      "_linha": 6,
                                      "_palavra": "var",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 17,
                                      "_linha": 6,
                                      "_palavra": "hugo",
                                      "_token": [Circular],
                                    },
                                  ],
                                  "_subclasse": "",
                                },
                              },
                              "_nos": [],
                              "_simbolo": "identificador",
                            },
                            Tree {
                              "_extra": Lexeme {
                                "_coluna": 8,
                                "_linha": 4,
                                "_palavra": "=",
                                "_token": Token {
                                  "_classe": "especial",
                                  "_lexemas": [
                                    [Circular],
                                    Lexeme {
                                      "_coluna": 9,
                                      "_linha": 5,
                                      "_palavra": "=",
                                      "_token": [Circular],
                                    },
                                  ],
                                  "_subclasse": "atr",
                                },
                              },
                              "_nos": [],
                              "_simbolo": "especial-atr",
                            },
                            Tree {
                              "_extra": null,
                              "_nos": [
                                Tree {
                                  "_extra": null,
                                  "_nos": [
                                    Tree {
                                      "_extra": null,
                                      "_nos": [
                                        Tree {
                                          "_extra": null,
                                          "_nos": [
                                            Tree {
                                              "_extra": null,
                                              "_nos": [
                                                Tree {
                                                  "_extra": Lexeme {
                                                    "_coluna": 10,
                                                    "_linha": 4,
                                                    "_palavra": "0",
                                                    "_token": Token {
                                                      "_classe": "literal-int",
                                                      "_lexemas": [
                                                        [Circular],
                                                        Lexeme {
                                                          "_coluna": 11,
                                                          "_linha": 5,
                                                          "_palavra": "10",
                                                          "_token": [Circular],
                                                        },
                                                      ],
                                                      "_subclasse": "",
                                                    },
                                                  },
                                                  "_nos": [],
                                                  "_simbolo": "literal-int",
                                                },
                                              ],
                                              "_simbolo": "<literal>",
                                            },
                                          ],
                                          "_simbolo": "<expressao_fator>",
                                        },
                                      ],
                                      "_simbolo": "<expressao_termo>",
                                    },
                                  ],
                                  "_simbolo": "<expressao>",
                                },
                              ],
                              "_simbolo": "<retorno_valor>",
                            },
                            Tree {
                              "_extra": Lexeme {
                                "_coluna": 11,
                                "_linha": 4,
                                "_palavra": ";",
                                "_token": Token {
                                  "_classe": "especial",
                                  "_lexemas": [
                                    Lexeme {
                                      "_coluna": 12,
                                      "_linha": 1,
                                      "_palavra": ";",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 13,
                                      "_linha": 2,
                                      "_palavra": ";",
                                      "_token": [Circular],
                                    },
                                    [Circular],
                                    Lexeme {
                                      "_coluna": 13,
                                      "_linha": 5,
                                      "_palavra": ";",
                                      "_token": [Circular],
                                    },
                                    Lexeme {
                                      "_coluna": 21,
                                      "_linha": 6,
                                      "_palavra": ";",
                                      "_token": [Circular],
                                    },
                                  ],
                                  "_subclasse": "del",
                                },
                              },
                              "_nos": [],
                              "_simbolo": "especial-delimiter",
                            },
                          ],
                          "_simbolo": "<atribuicao>",
                        },
                      ],
                      "_simbolo": "<comando>",
                    },
                  ],
                  "_simbolo": "<lista_comando>",
                },
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": null,
                      "_nos": [
                        Tree {
                          "_extra": Lexeme {
                            "_coluna": 4,
                            "_linha": 5,
                            "_palavra": "hugo",
                            "_token": Token {
                              "_classe": "identificador",
                              "_lexemas": [
                                Lexeme {
                                  "_coluna": 4,
                                  "_linha": 1,
                                  "_palavra": "var",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 4,
                                  "_linha": 2,
                                  "_palavra": "hugo",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 4,
                                  "_linha": 4,
                                  "_palavra": "var",
                                  "_token": [Circular],
                                },
                                [Circular],
                                Lexeme {
                                  "_coluna": 11,
                                  "_linha": 6,
                                  "_palavra": "var",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 17,
                                  "_linha": 6,
                                  "_palavra": "hugo",
                                  "_token": [Circular],
                                },
                              ],
                              "_subclasse": "",
                            },
                          },
                          "_nos": [],
                          "_simbolo": "identificador",
                        },
                        Tree {
                          "_extra": Lexeme {
                            "_coluna": 9,
                            "_linha": 5,
                            "_palavra": "=",
                            "_token": Token {
                              "_classe": "especial",
                              "_lexemas": [
                                Lexeme {
                                  "_coluna": 8,
                                  "_linha": 4,
                                  "_palavra": "=",
                                  "_token": [Circular],
                                },
                                [Circular],
                              ],
                              "_subclasse": "atr",
                            },
                          },
                          "_nos": [],
                          "_simbolo": "especial-atr",
                        },
                        Tree {
                          "_extra": null,
                          "_nos": [
                            Tree {
                              "_extra": null,
                              "_nos": [
                                Tree {
                                  "_extra": null,
                                  "_nos": [
                                    Tree {
                                      "_extra": null,
                                      "_nos": [
                                        Tree {
                                          "_extra": null,
                                          "_nos": [
                                            Tree {
                                              "_extra": Lexeme {
                                                "_coluna": 11,
                                                "_linha": 5,
                                                "_palavra": "10",
                                                "_token": Token {
                                                  "_classe": "literal-int",
                                                  "_lexemas": [
                                                    Lexeme {
                                                      "_coluna": 10,
                                                      "_linha": 4,
                                                      "_palavra": "0",
                                                      "_token": [Circular],
                                                    },
                                                    [Circular],
                                                  ],
                                                  "_subclasse": "",
                                                },
                                              },
                                              "_nos": [],
                                              "_simbolo": "literal-int",
                                            },
                                          ],
                                          "_simbolo": "<literal>",
                                        },
                                      ],
                                      "_simbolo": "<expressao_fator>",
                                    },
                                  ],
                                  "_simbolo": "<expressao_termo>",
                                },
                              ],
                              "_simbolo": "<expressao>",
                            },
                          ],
                          "_simbolo": "<retorno_valor>",
                        },
                        Tree {
                          "_extra": Lexeme {
                            "_coluna": 13,
                            "_linha": 5,
                            "_palavra": ";",
                            "_token": Token {
                              "_classe": "especial",
                              "_lexemas": [
                                Lexeme {
                                  "_coluna": 12,
                                  "_linha": 1,
                                  "_palavra": ";",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 13,
                                  "_linha": 2,
                                  "_palavra": ";",
                                  "_token": [Circular],
                                },
                                Lexeme {
                                  "_coluna": 11,
                                  "_linha": 4,
                                  "_palavra": ";",
                                  "_token": [Circular],
                                },
                                [Circular],
                                Lexeme {
                                  "_coluna": 21,
                                  "_linha": 6,
                                  "_palavra": ";",
                                  "_token": [Circular],
                                },
                              ],
                              "_subclasse": "del",
                            },
                          },
                          "_nos": [],
                          "_simbolo": "especial-delimiter",
                        },
                      ],
                      "_simbolo": "<atribuicao>",
                    },
                  ],
                  "_simbolo": "<comando>",
                },
              ],
              "_simbolo": "<lista_comando>",
            },
            Tree {
              "_extra": null,
              "_nos": [
                Tree {
                  "_extra": null,
                  "_nos": [
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 4,
                        "_linha": 6,
                        "_palavra": "return",
                        "_token": Token {
                          "_classe": "comando",
                          "_lexemas": [
                            [Circular],
                          ],
                          "_subclasse": "return",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "command-return",
                    },
                    Tree {
                      "_extra": null,
                      "_nos": [
                        Tree {
                          "_extra": null,
                          "_nos": [
                            Tree {
                              "_extra": null,
                              "_nos": [
                                Tree {
                                  "_extra": null,
                                  "_nos": [
                                    Tree {
                                      "_extra": null,
                                      "_nos": [
                                        Tree {
                                          "_extra": Lexeme {
                                            "_coluna": 11,
                                            "_linha": 6,
                                            "_palavra": "var",
                                            "_token": Token {
                                              "_classe": "identificador",
                                              "_lexemas": [
                                                Lexeme {
                                                  "_coluna": 4,
                                                  "_linha": 1,
                                                  "_palavra": "var",
                                                  "_token": [Circular],
                                                },
                                                Lexeme {
                                                  "_coluna": 4,
                                                  "_linha": 2,
                                                  "_palavra": "hugo",
                                                  "_token": [Circular],
                                                },
                                                Lexeme {
                                                  "_coluna": 4,
                                                  "_linha": 4,
                                                  "_palavra": "var",
                                                  "_token": [Circular],
                                                },
                                                Lexeme {
                                                  "_coluna": 4,
                                                  "_linha": 5,
                                                  "_palavra": "hugo",
                                                  "_token": [Circular],
                                                },
                                                [Circular],
                                                Lexeme {
                                                  "_coluna": 17,
                                                  "_linha": 6,
                                                  "_palavra": "hugo",
                                                  "_token": [Circular],
                                                },
                                              ],
                                              "_subclasse": "",
                                            },
                                          },
                                          "_nos": [],
                                          "_simbolo": "identificador",
                                        },
                                      ],
                                      "_simbolo": "<expressao_fator>",
                                    },
                                  ],
                                  "_simbolo": "<expressao_termo>",
                                },
                              ],
                              "_simbolo": "<expressao>",
                            },
                            Tree {
                              "_extra": Lexeme {
                                "_coluna": 15,
                                "_linha": 6,
                                "_palavra": "+",
                                "_token": Token {
                                  "_classe": "op-aritmetico",
                                  "_lexemas": [
                                    [Circular],
                                  ],
                                  "_subclasse": "adi",
                                },
                              },
                              "_nos": [],
                              "_simbolo": "op-aritmetico-adi",
                            },
                            Tree {
                              "_extra": null,
                              "_nos": [
                                Tree {
                                  "_extra": null,
                                  "_nos": [
                                    Tree {
                                      "_extra": Lexeme {
                                        "_coluna": 17,
                                        "_linha": 6,
                                        "_palavra": "hugo",
                                        "_token": Token {
                                          "_classe": "identificador",
                                          "_lexemas": [
                                            Lexeme {
                                              "_coluna": 4,
                                              "_linha": 1,
                                              "_palavra": "var",
                                              "_token": [Circular],
                                            },
                                            Lexeme {
                                              "_coluna": 4,
                                              "_linha": 2,
                                              "_palavra": "hugo",
                                              "_token": [Circular],
                                            },
                                            Lexeme {
                                              "_coluna": 4,
                                              "_linha": 4,
                                              "_palavra": "var",
                                              "_token": [Circular],
                                            },
                                            Lexeme {
                                              "_coluna": 4,
                                              "_linha": 5,
                                              "_palavra": "hugo",
                                              "_token": [Circular],
                                            },
                                            Lexeme {
                                              "_coluna": 11,
                                              "_linha": 6,
                                              "_palavra": "var",
                                              "_token": [Circular],
                                            },
                                            [Circular],
                                          ],
                                          "_subclasse": "",
                                        },
                                      },
                                      "_nos": [],
                                      "_simbolo": "identificador",
                                    },
                                  ],
                                  "_simbolo": "<expressao_fator>",
                                },
                              ],
                              "_simbolo": "<expressao_termo>",
                            },
                          ],
                          "_simbolo": "<expressao>",
                        },
                      ],
                      "_simbolo": "<retorno_valor>",
                    },
                    Tree {
                      "_extra": Lexeme {
                        "_coluna": 21,
                        "_linha": 6,
                        "_palavra": ";",
                        "_token": Token {
                          "_classe": "especial",
                          "_lexemas": [
                            Lexeme {
                              "_coluna": 12,
                              "_linha": 1,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 13,
                              "_linha": 2,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 11,
                              "_linha": 4,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            Lexeme {
                              "_coluna": 13,
                              "_linha": 5,
                              "_palavra": ";",
                              "_token": [Circular],
                            },
                            [Circular],
                          ],
                          "_subclasse": "del",
                        },
                      },
                      "_nos": [],
                      "_simbolo": "especial-delimiter",
                    },
                  ],
                  "_simbolo": "<retorne_principal>",
                },
              ],
              "_simbolo": "<comando>",
            },
          ],
          "_simbolo": "<lista_comando>",
        },
        Tree {
          "_extra": Lexeme {
            "_coluna": 0,
            "_linha": 7,
            "_palavra": "END.",
            "_token": Token {
              "_classe": "comando",
              "_lexemas": [
                [Circular],
              ],
              "_subclasse": "END.",
            },
          },
          "_nos": [],
          "_simbolo": "command-END.",
        },
      ],
      "_simbolo": "<statement_part>",
    },
  ],
  "_simbolo": "<program>",
}
`;

exports[`CompilerExpressions Generic test 2`] = `
[
  Tree {
    "_extra": Lexeme {
      "_coluna": 8,
      "_linha": 4,
      "_palavra": "=",
      "_token": Token {
        "_classe": "especial",
        "_lexemas": [
          [Circular],
          Lexeme {
            "_coluna": 9,
            "_linha": 5,
            "_palavra": "=",
            "_token": [Circular],
          },
        ],
        "_subclasse": "atr",
      },
    },
    "_nos": [
      Tree {
        "_extra": Lexeme {
          "_coluna": 4,
          "_linha": 4,
          "_palavra": "var",
          "_token": Token {
            "_classe": "identificador",
            "_lexemas": [
              Lexeme {
                "_coluna": 4,
                "_linha": 1,
                "_palavra": "var",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 4,
                "_linha": 2,
                "_palavra": "hugo",
                "_token": [Circular],
              },
              [Circular],
              Lexeme {
                "_coluna": 4,
                "_linha": 5,
                "_palavra": "hugo",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 11,
                "_linha": 6,
                "_palavra": "var",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 17,
                "_linha": 6,
                "_palavra": "hugo",
                "_token": [Circular],
              },
            ],
            "_subclasse": "",
          },
        },
        "_nos": [],
        "_simbolo": "var",
      },
      Tree {
        "_extra": Lexeme {
          "_coluna": 10,
          "_linha": 4,
          "_palavra": "0",
          "_token": Token {
            "_classe": "literal-int",
            "_lexemas": [
              [Circular],
              Lexeme {
                "_coluna": 11,
                "_linha": 5,
                "_palavra": "10",
                "_token": [Circular],
              },
            ],
            "_subclasse": "",
          },
        },
        "_nos": [],
        "_simbolo": "0",
      },
    ],
    "_simbolo": "=",
  },
  Tree {
    "_extra": Lexeme {
      "_coluna": 9,
      "_linha": 5,
      "_palavra": "=",
      "_token": Token {
        "_classe": "especial",
        "_lexemas": [
          Lexeme {
            "_coluna": 8,
            "_linha": 4,
            "_palavra": "=",
            "_token": [Circular],
          },
          [Circular],
        ],
        "_subclasse": "atr",
      },
    },
    "_nos": [
      Tree {
        "_extra": Lexeme {
          "_coluna": 4,
          "_linha": 5,
          "_palavra": "hugo",
          "_token": Token {
            "_classe": "identificador",
            "_lexemas": [
              Lexeme {
                "_coluna": 4,
                "_linha": 1,
                "_palavra": "var",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 4,
                "_linha": 2,
                "_palavra": "hugo",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 4,
                "_linha": 4,
                "_palavra": "var",
                "_token": [Circular],
              },
              [Circular],
              Lexeme {
                "_coluna": 11,
                "_linha": 6,
                "_palavra": "var",
                "_token": [Circular],
              },
              Lexeme {
                "_coluna": 17,
                "_linha": 6,
                "_palavra": "hugo",
                "_token": [Circular],
              },
            ],
            "_subclasse": "",
          },
        },
        "_nos": [],
        "_simbolo": "hugo",
      },
      Tree {
        "_extra": Lexeme {
          "_coluna": 11,
          "_linha": 5,
          "_palavra": "10",
          "_token": Token {
            "_classe": "literal-int",
            "_lexemas": [
              Lexeme {
                "_coluna": 10,
                "_linha": 4,
                "_palavra": "0",
                "_token": [Circular],
              },
              [Circular],
            ],
            "_subclasse": "",
          },
        },
        "_nos": [],
        "_simbolo": "10",
      },
    ],
    "_simbolo": "=",
  },
  Tree {
    "_extra": Lexeme {
      "_coluna": 4,
      "_linha": 6,
      "_palavra": "return",
      "_token": Token {
        "_classe": "comando",
        "_lexemas": [
          [Circular],
        ],
        "_subclasse": "return",
      },
    },
    "_nos": [
      Tree {
        "_extra": Lexeme {
          "_coluna": 15,
          "_linha": 6,
          "_palavra": "+",
          "_token": Token {
            "_classe": "op-aritmetico",
            "_lexemas": [
              [Circular],
            ],
            "_subclasse": "adi",
          },
        },
        "_nos": [
          Tree {
            "_extra": Lexeme {
              "_coluna": 11,
              "_linha": 6,
              "_palavra": "var",
              "_token": Token {
                "_classe": "identificador",
                "_lexemas": [
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 1,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 2,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 4,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 5,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                  [Circular],
                  Lexeme {
                    "_coluna": 17,
                    "_linha": 6,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                ],
                "_subclasse": "",
              },
            },
            "_nos": [],
            "_simbolo": "var",
          },
          Tree {
            "_extra": Lexeme {
              "_coluna": 17,
              "_linha": 6,
              "_palavra": "hugo",
              "_token": Token {
                "_classe": "identificador",
                "_lexemas": [
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 1,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 2,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 4,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 4,
                    "_linha": 5,
                    "_palavra": "hugo",
                    "_token": [Circular],
                  },
                  Lexeme {
                    "_coluna": 11,
                    "_linha": 6,
                    "_palavra": "var",
                    "_token": [Circular],
                  },
                  [Circular],
                ],
                "_subclasse": "",
              },
            },
            "_nos": [],
            "_simbolo": "hugo",
          },
        ],
        "_simbolo": "+",
      },
    ],
    "_simbolo": "return",
  },
]
`;

exports[`CompilerExpressions Generic test 3`] = `
[
  SimboloIdentificador {
    "_nome": "var",
    "_tipo": "int",
    "_token": Token {
      "_classe": "identificador",
      "_lexemas": [
        Lexeme {
          "_coluna": 4,
          "_linha": 1,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 2,
          "_palavra": "hugo",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 4,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 5,
          "_palavra": "hugo",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 11,
          "_linha": 6,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 17,
          "_linha": 6,
          "_palavra": "hugo",
          "_token": [Circular],
        },
      ],
      "_subclasse": "",
    },
  },
  SimboloIdentificador {
    "_nome": "hugo",
    "_tipo": "int",
    "_token": Token {
      "_classe": "identificador",
      "_lexemas": [
        Lexeme {
          "_coluna": 4,
          "_linha": 1,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 2,
          "_palavra": "hugo",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 4,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 4,
          "_linha": 5,
          "_palavra": "hugo",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 11,
          "_linha": 6,
          "_palavra": "var",
          "_token": [Circular],
        },
        Lexeme {
          "_coluna": 17,
          "_linha": 6,
          "_palavra": "hugo",
          "_token": [Circular],
        },
      ],
      "_subclasse": "",
    },
  },
]
`;

exports[`CompilerExpressions Generic test 4`] = `
[
  [
    Instruction {
      "_arguments": [
        "0",
      ],
      "_operand": "<0>",
      "_operator": "=",
    },
    Instruction {
      "_arguments": [
        "<0>",
      ],
      "_operand": "var",
      "_operator": "=",
    },
  ],
  [
    Instruction {
      "_arguments": [
        "10",
      ],
      "_operand": "<0>",
      "_operator": "=",
    },
    Instruction {
      "_arguments": [
        "<0>",
      ],
      "_operand": "hugo",
      "_operator": "=",
    },
  ],
  [
    Instruction {
      "_arguments": [
        "hugo",
      ],
      "_operand": "<0>",
      "_operator": "=",
    },
    Instruction {
      "_arguments": [
        "var",
      ],
      "_operand": "<1>",
      "_operator": "=",
    },
    Instruction {
      "_arguments": [
        "<1>",
        "<0>",
      ],
      "_operand": "<2>",
      "_operator": "+",
    },
    Instruction {
      "_arguments": [
        "<2>",
      ],
      "_operand": "return",
      "_operator": "return",
    },
  ],
]
`;

exports[`CompilerExpressions Generic test 5`] = `
[
  [
    Instruction {
      "_arguments": [
        "0",
      ],
      "_operand": "var",
      "_operator": "=",
    },
  ],
  [
    Instruction {
      "_arguments": [
        "10",
      ],
      "_operand": "hugo",
      "_operator": "=",
    },
  ],
  [
    Instruction {
      "_arguments": [
        "var",
        "hugo",
      ],
      "_operand": "<0>",
      "_operator": "+",
    },
    Instruction {
      "_arguments": [
        "<0>",
      ],
      "_operand": "return",
      "_operator": "return",
    },
  ],
]
`;

exports[`CompilerExpressions Generic test 6`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "VAR",
            },
          ],
          "name": "command-VAR",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "name": "var",
                    },
                  ],
                  "name": "identificador",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "name": ":",
                    },
                  ],
                  "name": "especial-colon",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "int",
                        },
                      ],
                      "name": "nome-escalar-int",
                    },
                  ],
                  "name": "<type>",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "name": ";",
                    },
                  ],
                  "name": "especial-delimiter",
                },
              ],
              "name": "<variable_declaration>",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "hugo",
                        },
                      ],
                      "name": "identificador",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": ":",
                        },
                      ],
                      "name": "especial-colon",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "int",
                            },
                          ],
                          "name": "nome-escalar-int",
                        },
                      ],
                      "name": "<type>",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": ";",
                        },
                      ],
                      "name": "especial-delimiter",
                    },
                  ],
                  "name": "<variable_declaration>",
                },
              ],
              "name": "<variable_declaration_list>",
            },
          ],
          "name": "<variable_declaration_list>",
        },
      ],
      "name": "<variable_declaration_part>",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "BEGIN",
            },
          ],
          "name": "command-BEGIN",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "var",
                                },
                              ],
                              "name": "identificador",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "=",
                                },
                              ],
                              "name": "especial-atr",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [],
                                                      "name": "0",
                                                    },
                                                  ],
                                                  "name": "literal-int",
                                                },
                                              ],
                                              "name": "<literal>",
                                            },
                                          ],
                                          "name": "<expressao_fator>",
                                        },
                                      ],
                                      "name": "<expressao_termo>",
                                    },
                                  ],
                                  "name": "<expressao>",
                                },
                              ],
                              "name": "<retorno_valor>",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": ";",
                                },
                              ],
                              "name": "especial-delimiter",
                            },
                          ],
                          "name": "<atribuicao>",
                        },
                      ],
                      "name": "<comando>",
                    },
                  ],
                  "name": "<lista_comando>",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "hugo",
                            },
                          ],
                          "name": "identificador",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "=",
                            },
                          ],
                          "name": "especial-atr",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [],
                                                  "name": "10",
                                                },
                                              ],
                                              "name": "literal-int",
                                            },
                                          ],
                                          "name": "<literal>",
                                        },
                                      ],
                                      "name": "<expressao_fator>",
                                    },
                                  ],
                                  "name": "<expressao_termo>",
                                },
                              ],
                              "name": "<expressao>",
                            },
                          ],
                          "name": "<retorno_valor>",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "name": ";",
                            },
                          ],
                          "name": "especial-delimiter",
                        },
                      ],
                      "name": "<atribuicao>",
                    },
                  ],
                  "name": "<comando>",
                },
              ],
              "name": "<lista_comando>",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "return",
                        },
                      ],
                      "name": "command-return",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "name": "var",
                                            },
                                          ],
                                          "name": "identificador",
                                        },
                                      ],
                                      "name": "<expressao_fator>",
                                    },
                                  ],
                                  "name": "<expressao_termo>",
                                },
                              ],
                              "name": "<expressao>",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "+",
                                },
                              ],
                              "name": "op-aritmetico-adi",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [],
                                          "name": "hugo",
                                        },
                                      ],
                                      "name": "identificador",
                                    },
                                  ],
                                  "name": "<expressao_fator>",
                                },
                              ],
                              "name": "<expressao_termo>",
                            },
                          ],
                          "name": "<expressao>",
                        },
                      ],
                      "name": "<retorno_valor>",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": ";",
                        },
                      ],
                      "name": "especial-delimiter",
                    },
                  ],
                  "name": "<retorne_principal>",
                },
              ],
              "name": "<comando>",
            },
          ],
          "name": "<lista_comando>",
        },
        {
          "children": [
            {
              "children": [],
              "name": "END.",
            },
          ],
          "name": "command-END.",
        },
      ],
      "name": "<statement_part>",
    },
  ],
  "name": "<program>",
}
`;
